<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PaperBoy</string>
    <string name="app_name_lower_case">paperboy</string>
    <string name="phone_number">Phone number</string>
    <string name="select_country_code_and_enter_phone">Select your country code and enter phone\nnumber from telegram account</string>
    <string name="enter_pass_code">Enter pass code</string>
    <string name="back">back</string>
    <string name="telegram_sent_code_to_you">Telegram sent the code to you. Enter to if\nyou want to import your channels</string>
    <string name="choose_channels_you_want_import_sentence">Choose channels\nyou want import</string>
    <string name="choose_channels_you_want_import_accent_word">import</string>
    <string name="template_you_have_channels_you_always_can_import">You have %1$d channels. You always can import\nchannels later in settings.</string>
    <string name="skip_import">Skip import</string>
    <string name="now_you_can_remove_channels_from_telegram_sentence">Now you can remove\nchannels from Telegram</string>
    <string name="now_you_can_remove_channels_from_telegram_accent_word">remove</string>
    <string name="now_you_can_tidy_up_dialog_list_in_your_favorite_messenger">Now you can tidy up dialog list in your favorite messenger and read channels in Paperboy.\nYou always can do it in settings.</string>
    <string name="remove_channels">Remove channels</string>
    <string name="maybe_later">Maybe later</string>
    <string name="oops_something_happened">Ooops, something happened</string>
    <string name="it_was_shit_sometimes_shit_happens">It was shit. Sometimes shit happens</string>
    <string name="enter_security_passcode">Enter security passcode</string>
    <string name="enter_passcode">Enter passcode</string>
    <string name="next">Next</string>
    <string name="send_code_as_sms">Send code as an SMS</string>
    <string name="code_was_sent_to_you_by_sms">The code was sent to you by SMS</string>
    <string name="you_want_more">You want more?</string>
    <string name="drop_this_shit">Drop this shit</string>
    <string name="printing_new_papers" tools:ignore="TypographyEllipsis">Printing new papers...</string>
    <string name="no_network_connection">No network connection</string>
    <string name="please_fix_it_and_try_again">Please fix it and try again</string>
</resources>
