<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
             android:clickable="true"
             android:focusable="true"
             android:background="@color/paper">

    <deniskaminskiy.paperboy.presentation.view.TopPopupView
            android:id="@+id/vTopPopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_margin="16dp"
            app:title="@string/oops_something_happened"
            app:iconConstant="ICON_TRASH"
            app:subtitle="Shit happens :("/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:clickable="false"
            android:focusable="false"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/vBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_arrow_back"
                    app:tint="@color/admiral"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:includeFontPadding="false"
                    android:minHeight="20dp"
                    android:layout_marginStart="12dp"
                    style="@style/TextStyle.Sans.Semibold.16"
                    android:textColor="@color/admiral"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                style="@style/TextStyle.Serif.Bold.24"
                android:minHeight="32dp"
                android:text="@string/enter_security_passcode"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle.Sans.Text.14"
                android:textColor="@color/print70"
                android:minHeight="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/telegram_sent_code_to_you"/>

        <deniskaminskiy.paperboy.presentation.view.TextPasswordInputView
                android:id="@+id/ivPasscode"
                android:layout_width="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                app:hintText="@string/enter_pass_code"
                android:layout_marginTop="24dp"
                android:layout_height="56dp"
                android:focusableInTouchMode="false"/>

        <deniskaminskiy.paperboy.presentation.view.ButtonView
                android:id="@+id/vNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:titleColor="@color/paper"
                app:title="@string/next"
                app:rightIconConstant="ICON_ARROW_FORWARD"
                app:rightIconColor="@color/paper"/>

    </LinearLayout>

    <deniskaminskiy.paperboy.presentation.view.LoadingView
            android:id="@+id/vLoading"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent"/>

</FrameLayout>